update: ルート探索エンドポイントのハンドラーにswaggerアノテーションを追加して、　 Swaggerドキュメントを更新
